# bili-message

./: .eslintrc.cjs  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  ws.rs
src/apis/: bilibili.ts  live.ts  music.ts  wbi.ts
src/components/: Account.vue  Background.vue  Chat.vue  Control.vue  Danmu.vue  Dynamic-Background.vue  Medal.vue  Music-List.vue  QRCode.vue  Updater.vue
src/components/Danmu/: Client.vue  Host.vue  HostItem.vue  SampleA.vue  SampleB.vue  config.ts
src/components/Drawer/: Danmu-Drawer.vue  Music-Drawer.vue
src/hooks/: useWebsocket.ts
src/stores/: background.ts  fav.ts  index.ts  music.ts  speech.ts
src/types/: .eslintrc-auto-import.json  app.d.ts  auto-imports.d.ts  common.d.ts  components.d.ts  music.d.ts
src/utils/: constants.ts  emoji.ts  enums.ts  events.ts  message.ts  request.ts  room.ts  router.ts  socket.ts  tools.ts  window.ts
src/views/: client.vue  host.vue  music.vue
src/views/Client/: Background.vue  Danmu.vue  Music.vue
src/views/Host/: Updater.vue  index.vue
src/views/Music/: Bar.vue  Collection.vue  List.vue  Search.vue  index.vue
src/views/Setting/: About.vue  Background.vue  Danmu.vue  Music.vue  Speech.vue  index.vue
types/: .eslintrc-auto-import.json  auto-imports.d.ts  components.d.ts
