[package]
name = "bili-message"
version = "1.2.9"
description = "bilibili弹幕机"
authors = ["半糖人类"]
license = "MIT"
repository = "https://github.com/orangelckc/bili-message"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
  "updater",
  "fs-write-file",
  "window-show",
  "window-create",
  "shell-open",
  "clipboard-write-text",
  "window-start-dragging",
  "window-set-always-on-top",
  "http-all",
  "macos-private-api",
  "system-tray",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { version = "1.34.0" }
futures-channel = "0.3.29"
futures-util = "0.3.29"
tungstenite = "0.21.0"
tokio-tungstenite = "0.21.0"
uuid = "1.5.0"
tauri-plugin-context-menu = { git = "https://github.com/c2r0b/tauri-plugin-context-menu", branch = "main" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
